@@ -1,3 +1,3 @@
 /path/Changes
 
-news
+/~eagle/styles/news.css
