@@ -10,6 +10,9 @@ v8.0.1 - Not Released
  - Add the ".css" suffix to the style specified in *.spin pointers for
    Markdown files, matching the behavior of text and pod files.
 
+ - Fix conversion of partial style sheet URLs in *.rpod and *.faq pointers
+   to style sheet names in *.spin files during docknot update-spin.
+
 v8.0.0 - 2024-07-07
 
  - DocKnot now uses semantic versioning for the package and modules, with
